[package]
name = "netidx-protocols"
version = "0.22.4"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2021"
homepage = "https://netidx.github.io/netidx-book/"
repository = "https://github.com/estokes/netidx"
description = "Protocols built on top of netidx"
documentation = "https://docs.rs/netidx-protocols"
readme = "../README.md"
license = "MIT"

[features]
default = []
krb5_iov = ["netidx/krb5_iov"]

[dependencies]
anyhow = "1"
netidx = { path = "../netidx", version = "0.22.0", default_features = false }
netidx-core = {path = "../netidx-core", version = "0.22.0", default_features = false }
netidx-netproto = {path = "../netidx-netproto", version = "0.22.0", default_features = false }
netidx-bscript = { path = "../netidx-bscript", version = "0.22.0", default_features = false }
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "io-util", "sync", "macros"] }
serde = "1"
serde_derive = "1"
bytes = "1"
fxhash = "0.2"
lazy_static = "1"
log = "0.4"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
arcstr = { version = "1", features = ["serde"] }
once_cell = "1.17.2"

[dev-dependencies]
proptest = "1"
env_logger = "0.10"
