[package]
name = "netidx-protocols"
version = "0.26.0"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2021"
homepage = "https://netidx.github.io/netidx-book/"
repository = "https://github.com/estokes/netidx"
description = "Protocols built on top of netidx"
documentation = "https://docs.rs/netidx-protocols"
readme = "../README.md"
license = "MIT"

[features]
default = []
krb5_iov = ["netidx/krb5_iov"]

[dependencies]
netidx = { path = "../netidx", version = "0.26.0", default_features = false }
netidx-core = {path = "../netidx-core", version = "0.26.0", default_features = false }
netidx-netproto = {path = "../netidx-netproto", version = "0.26.0", default_features = false }
netidx-bscript = { path = "../netidx-bscript", version = "0.26.0", default_features = false }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
bytes = { workspace = true }
fxhash = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
arcstr = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
proptest = "1"
env_logger = "0.10"
