[package]
name = "netidx-tools"
version = "0.19.5"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2021"
license = "MIT"
description = "netidx command line tools"
homepage = "https://netidx.github.io/netidx-book/"
repository = "https://github.com/estokes/netidx"
readme = "../README.md"
documentation = "https://docs.rs/netidx"
keywords = ["networking", "distributed", "kerberos", "tool"]
categories = ["network-programming"]

[[bin]]
name = "netidx"
path = "src/main.rs"

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"
nix = "0.26"

[features]
default = []
krb5_iov = ["netidx/krb5_iov"]

[dependencies]
anyhow = "1"
async-stream = "0.3"
bytes = "1"
chrono = {version = "^0.4.23", features = ["serde"]}
env_logger = "0.10"
futures = "0.3"
fxhash = "0.2"
log = "0.4"
netidx-tools-core = { path = "../netidx-tools-core", version = "^0.19", default_features = false }
netidx-archive = { path = "../netidx-archive", version = "^0.19", default_features = false }
netidx = { path = "../netidx", version = "^0.19.7", default_features = false }
netidx-protocols = { path = "../netidx-protocols", version = "^0.19", default_features = false }
netidx-bscript = { path = "../netidx-bscript", version = "^0.19", default_features = false }
netidx-container = { path = "../netidx-container", version = "^0.19", default_features = false }
netidx-wsproxy = { path = "../netidx-wsproxy", version = "^0.19", default_features = false }
parking_lot = "0.12"
serde = "1"
serde_derive = "1"
serde_json = "1"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
arcstr = { version = "1", features = ["serde"] }
combine = "4"
dirs = "5"
hdrhistogram = "7"
