[package]
name = "netidx-tools"
version = "0.27.2"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2021"
license = "MIT"
description = "netidx command line tools"
homepage = "https://netidx.github.io/netidx-book/"
repository = "https://github.com/estokes/netidx"
readme = "../README.md"
documentation = "https://docs.rs/netidx"
keywords = ["networking", "distributed", "kerberos", "tool"]
categories = ["network-programming"]

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false

[[bin]]
name = "netidx"
path = "src/main.rs"

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"
nix = { version = "0.29", features = ["process", "signal"] }

[features]
default = []
krb5_iov = ["netidx/krb5_iov"]

[dependencies]
netidx-tools-core = { path = "../netidx-tools-core", version = "0.27.0", default-features = false }
netidx-archive = { path = "../netidx-archive", version = "0.27.0", default-features = false }
netidx = { path = "../netidx", version = "0.27.0", default-features = false }
netidx-protocols = { path = "../netidx-protocols", version = "0.27.0", default-features = false }
netidx-bscript = { path = "../netidx-bscript", version = "0.27.0", default-features = false }
netidx-container = { path = "../netidx-container", version = "0.27.0", default-features = false }
netidx-wsproxy = { path = "../netidx-wsproxy", version = "0.27.0", default-features = false }
tokio = { workspace = true }
anyhow = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
fxhash = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
structopt = { workspace = true }
uuid = { workspace = true }
arcstr = { workspace = true }
combine = { workspace = true }
dirs = { workspace = true }
hdrhistogram = { workspace = true }
lltimer = { workspace = true }
