[package]
name = "netidx-tools"
version = "0.28.1"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2021"
license = "MIT"
description = "netidx command line tools"
homepage = "https://netidx.github.io/netidx-book/"
repository = "https://github.com/estokes/netidx"
readme = "../README.md"
documentation = "https://docs.rs/netidx"
keywords = ["networking", "distributed", "kerberos", "tool"]
categories = ["network-programming"]

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false

[[bin]]
name = "netidx"
path = "src/main.rs"

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"
nix = { version = "0.29", features = ["process", "signal"] }

[features]
default = []
krb5_iov = ["netidx/krb5_iov"]

[dependencies]
anyhow = { workspace = true }
arcstr = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
combine = { workspace = true }
compact_str = { workspace = true }
crossterm = { workspace = true }
dirs = { workspace = true }
env_logger = { workspace = true }
flexi_logger = { workspace = true }
futures = { workspace = true }
fxhash = { workspace = true }
hdrhistogram = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
netidx-archive = { path = "../netidx-archive", version = "0.28.0", default-features = false }
netidx-bscript = { path = "../netidx-bscript", version = "0.28.0", default-features = false }
netidx-container = { path = "../netidx-container", version = "0.28.0", default-features = false }
netidx = { path = "../netidx", version = "0.28.1", default-features = false }
netidx-protocols = { path = "../netidx-protocols", version = "0.28.0", default-features = false }
netidx-tools-core = { path = "../netidx-tools-core", version = "0.28.0", default-features = false }
netidx-wsproxy = { path = "../netidx-wsproxy", version = "0.28.0", default-features = false }
parking_lot = { workspace = true }
reedline = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
structopt = { workspace = true }
tokio = { workspace = true }
triomphe = { workspace = true }
