[package]
name = "netidx-wsproxy"
version = "0.24.1"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2021"
license = "MIT"
description = "netidx websocket proxy"
homepage = "https://netidx.github.io/netidx-book/"
repository = "https://github.com/estokes/netidx"
readme = "../README.md"
documentation = "https://docs.rs/netidx"
keywords = ["networking", "distributed", "kerberos", "tool"]
categories = ["network-programming"]

[features]
default = []
krb5_iov = ["netidx/krb5_iov"]

[dependencies]
anyhow = "1"
bytes = "1"
chrono = {version = "^0.4.23", features = ["serde"]}
env_logger = "0.10"
futures = "0.3"
fxhash = "0.2"
log = "0.4"
netidx = { path = "../netidx", version = "0.24.0", default_features = false }
netidx-protocols = { path = "../netidx-protocols", version = "0.24.0", default_features = false }
netidx-core = { path = "../netidx-core", version = "0.24.1", default_features = false }
parking_lot = "0.12"
serde = "1"
serde_derive = "1"
serde_json = "1"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
arcstr = { version = "1", features = ["serde"] }
warp = { version = "0.3", features = ["tls"] }
futures-util = "0.3"
once_cell = "1"
