[package]
name = "netidx-wsproxy"
version = "0.30.1"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2024"
license = "MIT"
description = "netidx websocket proxy"
homepage = "https://netidx.github.io/netidx-book/"
repository = "https://github.com/estokes/netidx"
readme = "../README.md"
documentation = "https://docs.rs/netidx"
keywords = ["networking", "distributed", "kerberos", "tool"]
categories = ["network-programming"]

[features]
default = []
krb5_iov = ["netidx/krb5_iov"]

[dependencies]
netidx = { path = "../netidx", version = "0.30.1", default-features = false }
netidx-protocols = { path = "../netidx-protocols", version = "0.30.1", default-features = false }
anyhow = { workspace = true }
futures = { workspace = true }
fxhash = { workspace = true }
log = { workspace = true }
poolshark = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
structopt = { workspace = true }
tokio = { workspace = true }
warp = { workspace = true }
