[package]
name = "netidx"
version = "0.25.0"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Secure, fast, pub/sub messaging"
homepage = "https://netidx.github.io/netidx-book/"
repository = "https://github.com/estokes/netidx"
documentation = "https://docs.rs/netidx"
readme = "../README.md"
keywords = ["network", "networking", "distributed", "kerberos"]
categories = ["network-programming"]

[features]
default = []
krb5_iov = ["cross-krb5/iov"]

[dependencies]
netidx-core = { version = "0.25.0", path = "../netidx-core" }
netidx-netproto = { version = "0.25.0", path = "../netidx-netproto" }
tokio = { workspace = true }
cross-krb5 = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
fxhash = { workspace = true }
futures = { workspace = true }
immutable-chunkmap = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
lazy_static = { workspace = true }
bytes = { workspace = true }
byteorder = { workspace = true }
crossbeam = { workspace = true }
parking_lot = { workspace = true }
bitflags = { workspace = true }
if-addrs = { workspace = true }
dirs = { workspace = true }
num_cpus = { workspace = true }
triomphe = { workspace = true }
arcstr = { workspace = true }
rustls-pemfile = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
webpki = { workspace = true }
x509-parser = { workspace = true }
pkcs8 = { workspace = true }
keyring = { workspace = true }
smallvec = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
env_logger = "0.10"
