[package]
name = "netidx"
version = "0.31.0"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2024"
license = "MIT"
description = "Secure, fast, pub/sub messaging"
homepage = "https://netidx.github.io/netidx-book/"
repository = "https://github.com/estokes/netidx"
documentation = "https://docs.rs/netidx"
readme = "../README.md"
keywords = ["network", "networking", "distributed", "kerberos"]
categories = ["network-programming"]

[features]
default = []
krb5_iov = ["cross-krb5/iov"]

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32", 
    "Win32_Storage", 
    "Win32_Storage_FileSystem", 
    "Win32_System",
    "Win32_System_Threading"
] }

[dependencies]
anyhow = { workspace = true }
arcstr = { workspace = true }
bitflags = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
cross-krb5 = { workspace = true }
ctrlc = { workspace = true }
derive_builder = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
fxhash = { workspace = true }
if-addrs = { workspace = true }
immutable-chunkmap = { workspace = true }
indexmap = { workspace = true }
keyring = { workspace = true }
log = { workspace = true }
netidx-core = { version = "0.31.0", path = "../netidx-core" }
netidx-netproto = { version = "0.31.0", path = "../netidx-netproto" }
num_cpus = { workspace = true }
parking_lot = { workspace = true }
pkcs8 = { workspace = true }
poolshark = { workspace = true }
rand = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rustls-pki-types = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
tempdir = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
triomphe = { workspace = true }
x509-parser = { workspace = true }

[dev-dependencies]
env_logger = "0.11"
