[package]
name = "test"
version = "0.1.0"
authors = ["Eric Stokes <letaris@gmail.com>"]

[profile.dev]
opt-level = 0
codegen-units = 1
incremental = false

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1"
tokio-io = "0.1"
tokio-timer = "0.2"
futures = "0.1"
futures-await = "0.1"
json_pubsub = {path = ".."}
